tests/lean/typeMismatch.lean.expected.out
typeMismatch.lean:7:0-7:13: error: type mismatch
  IO.println ""
has type
  IO Unit : Type
but is expected to have type
  IO Nat : Type
typeMismatch.lean:12:0-12:16: error: type mismatch
  Meta.isDefEq x x
has type
  MetaM Bool : Type
but is expected to have type
  MetaM Unit : Type
